# sb2099

./: .env.example  .gitignore  LICENSE  README.md  api.md  pyproject.toml  分析报告.md  设计文档.md  设计文档_new.md
alembic/: env.py
alembic/versions/: 0001_init.py  0002_fts5_trigram.py  0003_add_live_hot_min_length.py  0004_add_live_hot_max_length.py  0005_daily_hot.py  0006_live_suffix_strips.py  0007_user.py  0008_submitter_uid_and_review.py  0009_tag_voting.py  0010_submit_signed_ratelimit.py  0011_live_cut_markers.py
docs/superpowers/plans/: 2026-05-29-daily-hot-retention.md  (+1 more)
refs/: sb6657-api-snapshot.md
sb2099/: __init__.py  config.py  cron.py  db.py  live_day.py  models.py  normalize.py  ratelimit.py  search.py  settings.py  submission.py  tag_voting.py  users.py
sb2099/ingest/: __init__.py  aggregator.py  client.py  danmu_tcp.py  worker.py
sb2099/userscript/: sb2099.user.js
sb2099/web/: __init__.py  _filters.py  admin_auth.py  app.py  routes_admin.py  routes_api.py  routes_api_admin.py  routes_public.py  settings_meta.py  spa.py
tests/: conftest.py  test_aggregator.py  test_api_live_in_library.py  test_cron.py  test_danmu_tcp.py  test_live_day.py  test_normalize.py  test_review_uid.py  test_routes_admin.py  test_routes_api.py  test_routes_api_admin.py  test_routes_public.py  test_search.py  test_settings.py  test_spa_fallback.py  test_submission.py  test_tag_voting.py  test_user_upsert.py  test_users.py  test_users_search.py  test_withdraw.py  test_worker.py
tools/: backfill_daily_hot.py  backfill_live_hot.py  renorm_raw.py  seed_users_from_hyacinth.py
(+103 files in other folders)
