[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sb2099"
version = "0.1.0"
description = "Douyu room 2099 (real id 12740109) bad-meme collection station"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "lbf186", email = "lbf186@gmail.com" }]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "aiosqlite>=0.20",
    "slowapi>=0.1.9",
    "httpx>=0.27",
    "websockets>=12.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "playwright>=1.44",
]

[tool.setuptools.packages.find]
include = ["sb2099*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
